<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="5dip"
    android:paddingRight="5dip"
    >
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="#FF505050" />
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="5dip"
            android:paddingBottom="15dip"
            >
            <TextView
                android:id="@+id/about_version_label"
                android:text="@string/version_label"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip" />
	       <TextView
                android:id="@+id/about_version"
	            android:text="@string/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFFFF" />
	       <TextView
                android:id="@+id/about_developed_label"
                android:text="@string/developed_label"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:layout_marginBottom="5dip" />
            <TextView
                android:id="@+id/about_website"
                android:text="@string/website"
                android:autoLink="web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
                    
        </LinearLayout>
    </ScrollView>
</LinearLayout>
