<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/disconnect_root"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
    <View
        android:layout_height="1dp"
        android:layout_width="fill_parent"
        android:background="#FF707070"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:paddingLeft="20dip"
        android:paddingRight="20dip"
        android:paddingTop="5dip"
        android:paddingBottom="15dip"
        >
        <TextView 
            android:id="@+id/disconnect_text"
            android:text="@string/warning_disconnect"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />
        
    </ScrollView>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="#c6c3c6"
        android:minHeight="55dip"
        android:paddingTop="5dip"
        >
        <Button
            android:id="@+id/disconnect_yesButton"
            android:text="@string/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dip" />
        <Button
            android:id="@+id/disconnect_noButton"
            android:text="@string/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dip" />
            
    </LinearLayout> 
</LinearLayout>

