<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="15dip"
    android:paddingRight="15dip"
    >
    <View
        android:layout_height="1dp"
        android:layout_width="fill_parent"
        android:background="#FF707070"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="5dip"
            android:paddingBottom="15dip"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            >
            <TextView
                android:id="@+id/pc_settings_actualName_label"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView 
                android:id="@+id/pc_settings_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dip" />
            <TextView
                android:id="@+id/pc_settings_givenPcName_label"
                android:text="@string/given_name"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                >
		        <EditText
		            android:id="@+id/pc_settings_name_edit"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:minWidth="200dp"
                    android:layout_marginTop="2dp"
		            android:layout_weight="1" />
		        <Button
		            android:id="@+id/pc_settings_editButton"
		            android:text="@string/ok"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
		            android:minWidth="50dp" />
    
            </LinearLayout>
            <View
                android:layout_height="1dp"
                android:layout_width="fill_parent"
                android:layout_marginTop="5dp"
                android:background="#FF707070" />
            <TextView
                android:id="@+id/connect_accessRights_label"
                android:text="@string/access_rights_prompt"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip" />
            <Spinner 
                android:id="@+id/pc_settings_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />
            <CheckBox
                android:id="@+id/pc_settings_check"
                android:text="@string/auto_connect"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />
              
        </LinearLayout> 
    </ScrollView>
</LinearLayout>

